deploy: 9865cb9f1e15eafe0e2523fa1177ce55061f4be1

--- a/namespace_math_functions.html
+++ b/namespace_math_functions.html
@@ -68,11 +68,11 @@
           <dl class="m-doc">
             <dt>
               <span class="m-doc-wrap-bumper">auto <a href="#a157da279fdff2cd22ee674eb382c6f9f" class="m-doc">add</a>(</span><span class="m-doc-wrap">double x,
-              double y) -&gt; double <a href="mathfunctions__export_8h.html#a8a3becd9126d07eb476e90b2cd0983b7" class="m-doc">MATHFUNCTIONS_<wbr />EXPORT</a></span>
+              double y) -&gt; double MATHFUNCTIONS_EXPORT</span>
             </dt>
             <dd><span></span></dd>
             <dt>
-              <span class="m-doc-wrap-bumper">auto <a href="#a0690c599708489cb5796e755797fe922" class="m-doc">sqrt</a>(</span><span class="m-doc-wrap">double x) -&gt; double <a href="mathfunctions__export_8h.html#a8a3becd9126d07eb476e90b2cd0983b7" class="m-doc">MATHFUNCTIONS_<wbr />EXPORT</a></span>
+              <span class="m-doc-wrap-bumper">auto <a href="#a0690c599708489cb5796e755797fe922" class="m-doc">sqrt</a>(</span><span class="m-doc-wrap">double x) -&gt; double MATHFUNCTIONS_EXPORT</span>
             </dt>
             <dd><span></span></dd>
           </dl>
@@ -81,7 +81,7 @@
           <h2>Function documentation</h2>
           <section class="m-doc-details" id="a157da279fdff2cd22ee674eb382c6f9f"><div>
             <h3>
-              <span class="m-doc-wrap-bumper">double <a href="mathfunctions__export_8h.html#a8a3becd9126d07eb476e90b2cd0983b7" class="m-doc">MATHFUNCTIONS_<wbr />EXPORT</a> MathFunctions::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a157da279fdff2cd22ee674eb382c6f9f" class="m-doc-self">add</a>(</span><span class="m-doc-wrap">double x,
+              <span class="m-doc-wrap-bumper">double MATHFUNCTIONS_EXPORT MathFunctions::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a157da279fdff2cd22ee674eb382c6f9f" class="m-doc-self">add</a>(</span><span class="m-doc-wrap">double x,
               double y)</span></span>
               <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="_addition_8h.html">&lt;mathfunctions/Addition.h&gt;</a></div>
             </h3>
@@ -89,7 +89,7 @@
           </div></section>
           <section class="m-doc-details" id="a0690c599708489cb5796e755797fe922"><div>
             <h3>
-              <span class="m-doc-wrap-bumper">double <a href="mathfunctions__export_8h.html#a8a3becd9126d07eb476e90b2cd0983b7" class="m-doc">MATHFUNCTIONS_<wbr />EXPORT</a> MathFunctions::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a0690c599708489cb5796e755797fe922" class="m-doc-self">sqrt</a>(</span><span class="m-doc-wrap">double x)</span></span>
+              <span class="m-doc-wrap-bumper">double MATHFUNCTIONS_EXPORT MathFunctions::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a0690c599708489cb5796e755797fe922" class="m-doc-self">sqrt</a>(</span><span class="m-doc-wrap">double x)</span></span>
               <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="_math_functions_8h.html">&lt;mathfunctions/MathFunctions.h&gt;</a></div>
             </h3>
             <p><span></span></p>
